--- a/example.conf.yaml
+++ b/example.conf.yaml
@@ -6,10 +6,53 @@ netdev: 30-wireguard
 iface: wg0
 # Name of .network, with or without suffix
 network: 40-wireguard
+# The below peers assemble a pseudo full-mesh network in which fuo, pdh, hk1 are able to connect to each other,
+# but all other peers connect to the above network using hk1 as a "gateway". fuo, pdh, hk1 themselves assemble
+# a real full-mesh network.
 peers:
-  siteA:
+  fuo:
     ip: 192.168.77.2/24
-    forward: 
-      - 192.168.7.0/24
-  siteB:
+    endpoint: fuo.fuckblizzard.com:51820
+    forward:
+      - 192.168.67.0/24
+      - fd60:c3e0:a2d7::/48
+  pdh:
     ip: 192.168.77.3/24
+    endpoint: pd6.fuckblizzard.com:51820
+    forward:
+      - 192.168.7.0/24
+      - 192.168.15.0/24
+      - 192.168.17.0/24
+      - fdb5:c701:19a6::/48
+  # The below peers assemble a star network in which all traffic need to go through hk1
+  hk1:
+    ip: 192.168.77.96/24
+    endpoint: hk1.fuckblizzard.com:51820
+    children:
+      rz5:
+        ip: 192.168.77.97/24
+        endpoint: rz5.lan
+        # The selective peers in the same level this peer is able to connect
+        #  - This peer is always able to connect to its parent, if it lives in a recursive subnet (like this to `hk1`)
+        #  - If not set, this peer is able to connect to every other peer at the same level
+        #  - If set, this peer is only able to connect selective peers at the same level
+        #    - Specially, if set to empty, this peer is considierd unable to connect to any other peer (other than parent)
+        # In any case, to create route, two peers must be considered able to connect to each other
+        # In any case, peers in different levels can neven connect to each other
+        reach:
+      l3a:
+        ip: 192.168.77.98/24
+        endpoint: l3a.lan
+        reach:
+      cm2:
+        ip: 192.168.77.99/24
+        endpoint: cm2.lan
+        reach:
+      r33:
+        ip: 192.168.77.100/24
+        endpoint: r33.lan
+        reach:
+      mi3:
+        ip: 192.168.77.101/24
+        endpoint: mi3.lan
+        reach:
