--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,11 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-arrayvec = "0.7.4"
-base64 = "0.22.1"
-curve25519-dalek = "4.1.2"
-ipnet = { version = "2.9", features = ["serde"] }
-rand = "0.8.5"
-serde = "1.0.203"
-serde_yaml = "0.9.34"
-x25519-dalek = "2.0.1"
+base64 = "0.22"
+curve25519-dalek = "4.1"
+rand = "0.8"
+serde = { version = "1.0", features = ["derive"] }
+serde_yaml = "0.9"
