--- a/example.conf.yaml
+++ b/example.conf.yaml
@@ -6,18 +6,20 @@ netdev: 30-wireguard
 iface: wg0
 # Name of .network, without suffix
 network: 40-wireguard
+# The subnet mask, would be appended after IP
+mask: 24
 # The below peers assemble a pseudo full-mesh network in which fuo, pdh, hk1 are able to connect to each other,
 # but all other peers connect to the above network using hk1 as a "gateway". fuo, pdh, hk1 themselves assemble
 # a real full-mesh network.
 peers:
   fuo:
-    ip: 192.168.77.2/24
+    ip: 192.168.77.2
     endpoint: fuo.fuckblizzard.com:51820
     forward:
       - 192.168.67.0/24
       - fd60:c3e0:a2d7::/48
   pdh:
-    ip: 192.168.77.3/24
+    ip: 192.168.77.3
     endpoint: pd6.fuckblizzard.com:51820
     forward:
       - 192.168.7.0/24
@@ -26,12 +28,12 @@ peers:
       - fdb5:c701:19a6::/48
   # The below peers assemble a star network in which all traffic need to go through hk1
   hk1:
-    ip: 192.168.77.96/24
+    ip: 192.168.77.96
     endpoint: hk1.fuckblizzard.com:51820
     children:
       rz5:
-        ip: 192.168.77.97/24
-        endpoint: rz5.lan
+        ip: 192.168.77.97
+        endpoint: rz5.lan:51820
         # The selective peers in the same level this peer is able to connect directly, instead of going through the parent
         #  - This peer is always able to connect to its parent, if it lives in a recursive subnet (like this to `hk1`)
         #  - If not set, this peer is able to connect to every other peer at the same level
@@ -41,18 +43,18 @@ peers:
         # In any case, peers in different levels can neven connect to each other
         direct: [hk1]
       l3a:
-        ip: 192.168.77.98/24
-        endpoint: l3a.lan
+        ip: 192.168.77.98
+        endpoint: l3a.lan:51820
         direct: []
       cm2:
-        ip: 192.168.77.99/24
-        endpoint: cm2.lan
+        ip: 192.168.77.99
+        endpoint: cm2.lan:51820
         direct: []
       r33:
-        ip: 192.168.77.100/24
-        endpoint: r33.lan
+        ip: 192.168.77.100
+        endpoint: r33.lan:51820
         direct: []
       mi3:
-        ip: 192.168.77.101/24
-        endpoint: mi3.lan
+        ip: 192.168.77.101
+        endpoint: mi3.lan:51820
         direct: []
