--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 base64 = "0.22"
+clap = { version = "4.5.7", features = ["derive"] }
 curve25519-dalek = "4.1"
 rand = "0.8"
 serde = { version = "1.0", features = ["derive"] }
